--- a/main.css
+++ b/main.css
@@ -45,7 +45,8 @@ relativamente a pag. */
     left:5%;
 } 
 .photo{
-    background: url(./images/image-tanya.jpg);
+    background-repeat:no-repeat;
+    background-size:contain;
 }
 
 .icon-container{
@@ -102,18 +103,19 @@ relativamente a pag. */
    left:11%;
 }
 
-.testimony-tanya{
+.testimony{
     position:relative;
     font-size:2.5em;
     color:hsl(240, 38%, 20%);
 }
-.signature-tanya{
-    color:hsl(240, 38%, 20%);
-}
-.signature-tanya a{
+.name{
     color:hsl(240, 38%, 20%);
     font-weight:900;
 }
+.role{
+    color:hsl(240, 38%, 20%);
+    font-weight:300;
+}
 
 
 
@@ -129,6 +131,10 @@ relativamente a pag. */
 
 
 
+
+
+/*This is just part of my standard boiler plate for projects and can be removed*/
+/*I copied this boilerplate from someone but cant remmember who. Sorry*/
 
 
 
