--- a/main.css
+++ b/main.css
@@ -1,139 +1,173 @@
 /* pattern images*/
-html{
+html {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-.pattern-curve{
-   position:fixed;
-   bottom:0; 
-   width:40%; 
+.pattern-curve {
+    position: fixed;
+    bottom: 0;
+    width: 40%;
 }
 
-.pattern-quotes{
-    position:fixed;
-    top:23%;
-    left:18%;
-    width:7%;
+.pattern-quotes {
+    position: fixed;
+    top: 23%;
+    left: 18%;
+    width: 7%;
 }
 
-.img-container{
-    /*background: gray;*/
-    width:65%;
-    height:75%;
-    position:fixed;
-    top:9%;
-    left:45%;
-    background-image: url(./images/pattern-bg.svg);
-    background-size:contain;
-    background-repeat:no-repeat;
-    background-position:center;
+.img-container {
+    width: 65%;
+    height: 75%;
+    position: fixed;
+    top: 9%;
+    left: 45%;
+    background-image: url("./images/pattern-bg.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.img-container .photo{
-    width:88%;
-    height:83%;
-    position:relative;
-    background-size:contain;
-    background-repeat:no-repeat;
-    background-position:center;
-    top:8.5%;
-    left:5%;
-} 
-.photo{
-    background-repeat:no-repeat;
-    background-size:contain;
+.img-container .photo {
+    width: 88%;
+    height: 83%;
+    position: relative;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 8.5%;
+    left: 5%;
 }
 
-.icon-container{
-    position:relative;
-    top:3%;
-    left:30%;
-    width:12%;
-    height:10%;
-    background:whitesmoke;
+.photo {
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.icon-container {
+    position: relative;
+    top: 3%;
+    left: 30%;
+    width: 12%;
+    height: 10%;
+    background: whitesmoke;
     display: flex;
     justify-content: center;
-    border-radius:50px;
+    border-radius: 50px;
     -webkit-box-shadow: -3px 7px 34px -16px rgba(0,0,0,0.75);
     -moz-box-shadow: -3px 7px 34px -16px rgba(0,0,0,0.75);
     box-shadow: -3px 7px 34px -16px rgba(0,0,0,0.75);
 }
 
-.btn{
-    width:25%;
-    height:100%;
+.btn {
+    width: 50%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    border:none;
+    border: none;
 }
 
-.btnPrev{
+.btnPrev {
     border-radius: 50px 0 0 50px;
-
+    z-index:100;
 }
-.btnPrev:active{
-    width:25%;
-    height:100%;
-    background-color:hsl(240, 18%, 77%);
+
+.btnPrev:active {
+    background-color: hsl(240, 18%, 77%);
     box-shadow: inset -200px 28px 209px -200px rgba(58, 58, 58, 0.37);
 }
 
-.btnNext{
+.btnNext {
     border-radius: 0 50px 50px 0;
-        
+    z-index:100;
 }
-.btnNext:active{
-    background-color:hsl(240, 18%, 77%);
+.btnNext:active {
+    background-color: hsl(240, 18%, 77%);
     box-shadow: inset -165px 28px 209px -200px rgba(58, 58, 58, 0.37);
+}
+
+.slider-nav {
+    cursor: pointer;
+}
+
+.testimony-container {
+    position: fixed;
+    top: 31%;
+    left: 11%;
+}
+
+.testimony {
+    position: relative;
+    font-size: 2.5em;
+    color: hsl(240, 38%, 20%);
+}
+.signature{
+    display:flex;
+    justify-content: flex-start;
     
-    
 }
-
-.slider-nav{
-    cursor:pointer;
+.name {
+    color: hsl(240, 38%, 20%);
+    font-weight: 900;
+    margin-right:20px;
 }
-.testimony-container{
-   position:fixed;
-   top:31%;
-   left:11%;
-}
-
-.testimony{
-    position:relative;
-    font-size:2.5em;
-    color:hsl(240, 38%, 20%);
-}
-.name{
-    color:hsl(240, 38%, 20%);
-    font-weight:900;
-}
-.role{
-    color:hsl(240, 38%, 20%);
-    font-weight:300;
+.role {
+    color: hsl(240, 38%, 20%);
+    font-weight: 300;
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 414px) {
+    .img-container {
+        width: 77%;
+        height: 53%;
+        top: 0;
+        left: 15%;
+    }
+    .img-container .photo {
+        width: 79%;
+        height: 84%;
+        top: 8.5%;
+        left: 7%;
+    }
+    .icon-container {
+        position:fixed;
+        top:41%;
+        left:40%;
+        width: 23%;
+        height: 6%;  
+    }
+    .btn {
+        height: 100%; 
+    }
+    .pattern-quotes{ 
+        top: 55%;
+        left: 45%;
+        width: 15%;
+    }
+    .testimony-container {
+        top: 58%;
+        left: 5%;
+        text-align:center;
+    }
+    .testimony{
+        font-size:1.2em;
+    }
+    .signature{
+        display:block;
+    }
+    .name{
+        margin:0; 
+    }
+    .pattern-curve{
+        width:60%;
+    }
+}
 
 /*This is just part of my standard boiler plate for projects and can be removed*/
 /*I copied this boilerplate from someone but cant remmember who. Sorry*/
-
-
-
 
 /*
 Table of contents
@@ -153,7 +187,6 @@ Table of contents
 - Media Queries
 */
 
-
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
@@ -162,97 +195,164 @@ Table of contents
     max-width: 960px;
     margin: 0 auto;
     padding: 0 20px;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
-  
-  
- /*column layout*/
- [class*="col-"] {
+
+/*column layout*/
+[class*="col-"] {
     float: left;
     padding: 0;
     border: none;
-  }
-  
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-  
-  .row::after {
+}
+
+.col-1 {
+    width: 8.33%;
+}
+.col-2 {
+    width: 16.66%;
+}
+.col-3 {
+    width: 25%;
+}
+.col-4 {
+    width: 33.33%;
+}
+.col-5 {
+    width: 41.66%;
+}
+.col-6 {
+    width: 50%;
+}
+.col-7 {
+    width: 58.33%;
+}
+.col-8 {
+    width: 66.66%;
+}
+.col-9 {
+    width: 75%;
+}
+.col-10 {
+    width: 83.33%;
+}
+.col-11 {
+    width: 91.66%;
+}
+.col-12 {
+    width: 100%;
+}
+
+.row::after {
     content: "";
     clear: both;
     display: table;
-  }
-  
-  
-  /* Base Styles
+}
+
+/* Base Styles
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  /* NOTE
+/* NOTE
   html is set to 62.5% so that all the REM measurements throughout Skeleton
   are based on 10px sizing. So basically 1.5rem = 15px :) */
-  * {
+* {
     box-sizing: border-box;
-  }
-  html {
-    font-size: 62.5%; }
-  body {
-    font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+}
+html {
+    font-size: 62.5%;
+}
+body {
+    font-size: 1.5em;
+    /* currently ems cause chrome bug misinterpreting rems on body element */
     line-height: 1.6;
     font-weight: 400;
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #222; }
-  
-  
-  /* Typography
+    color: #222;
+}
+
+/* Typography
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-top: 0;
     margin-bottom: 2rem;
-    font-weight: 300; }
-  h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-  h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-  h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-  h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-  h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-  h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
-  
-  /* Larger than phablet */
-  @media (min-width: 550px) {
-    h1 { font-size: 5.0rem; }
-    h2 { font-size: 4.2rem; }
-    h3 { font-size: 3.6rem; }
-    h4 { font-size: 3.0rem; }
-    h5 { font-size: 2.4rem; }
-    h6 { font-size: 1.5rem; }
-  }
-  
-  p {
-    margin-top: 0; }
-  
-  
-  /* Links
+    font-weight: 300;
+}
+h1 {
+    font-size: 4.0rem;
+    line-height: 1.2;
+    letter-spacing: -.1rem;
+}
+h2 {
+    font-size: 3.6rem;
+    line-height: 1.25;
+    letter-spacing: -.1rem;
+}
+h3 {
+    font-size: 3.0rem;
+    line-height: 1.3;
+    letter-spacing: -.1rem;
+}
+h4 {
+    font-size: 2.4rem;
+    line-height: 1.35;
+    letter-spacing: -.08rem;
+}
+h5 {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    letter-spacing: -.05rem;
+}
+h6 {
+    font-size: 1.5rem;
+    line-height: 1.6;
+    letter-spacing: 0;
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+    h1 {
+        font-size: 5.0rem;
+    }
+    h2 {
+        font-size: 4.2rem;
+    }
+    h3 {
+        font-size: 3.6rem;
+    }
+    h4 {
+        font-size: 3.0rem;
+    }
+    h5 {
+        font-size: 2.4rem;
+    }
+    h6 {
+        font-size: 1.5rem;
+    }
+}
+
+p {
+    margin-top: 0;
+}
+
+/* Links
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  a {
-    color: #1EAEDB; }
-  a:hover {
-    color: #0FA0CE; }
-  
-  
-  /* Buttons
+a {
+    color: #1EAEDB;
+}
+a:hover {
+    color: #0FA0CE;
+}
+
+/* Buttons
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  .button,
-  button,
-  input[type="submit"],
-  input[type="reset"],
-  input[type="button"] {
+.button,
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
     display: inline-block;
     height: 38px;
     padding: 0 30px;
@@ -261,7 +361,7 @@ Table of contents
     font-size: 11px;
     font-weight: 600;
     line-height: 38px;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     text-transform: uppercase;
     text-decoration: none;
     white-space: nowrap;
@@ -269,234 +369,256 @@ Table of contents
     border-radius: 4px;
     border: 1px solid #bbb;
     cursor: pointer;
-    box-sizing: border-box; }
-  .button:hover,
-  button:hover,
-  input[type="submit"]:hover,
-  input[type="reset"]:hover,
-  input[type="button"]:hover,
-  .button:focus,
-  button:focus,
-  input[type="submit"]:focus,
-  input[type="reset"]:focus,
-  input[type="button"]:focus {
+    box-sizing: border-box;
+}
+.button:focus,
+.button:hover,
+button:focus,
+button:hover,
+input[type="button"]:focus,
+input[type="button"]:hover,
+input[type="reset"]:focus,
+input[type="reset"]:hover,
+input[type="submit"]:focus,
+input[type="submit"]:hover {
     color: #333;
     border-color: #888;
-    outline: 0; }
-  .button.button-primary,
-  button.button-primary,
-  input[type="submit"].button-primary,
-  input[type="reset"].button-primary,
-  input[type="button"].button-primary {
+    outline: 0;
+}
+.button.button-primary,
+button.button-primary,
+input[type="button"].button-primary,
+input[type="reset"].button-primary,
+input[type="submit"].button-primary {
     color: #FFF;
     background-color: #33C3F0;
-    border-color: #33C3F0; }
-  .button.button-primary:hover,
-  button.button-primary:hover,
-  input[type="submit"].button-primary:hover,
-  input[type="reset"].button-primary:hover,
-  input[type="button"].button-primary:hover,
-  .button.button-primary:focus,
-  button.button-primary:focus,
-  input[type="submit"].button-primary:focus,
-  input[type="reset"].button-primary:focus,
-  input[type="button"].button-primary:focus {
+    border-color: #33C3F0;
+}
+.button.button-primary:focus,
+.button.button-primary:hover,
+button.button-primary:focus,
+button.button-primary:hover,
+input[type="button"].button-primary:focus,
+input[type="button"].button-primary:hover,
+input[type="reset"].button-primary:focus,
+input[type="reset"].button-primary:hover,
+input[type="submit"].button-primary:focus,
+input[type="submit"].button-primary:hover {
     color: #FFF;
     background-color: #1EAEDB;
-    border-color: #1EAEDB; }
-  
-  
-  /* Forms
+    border-color: #1EAEDB;
+}
+
+/* Forms
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  input[type="email"],
-  input[type="number"],
-  input[type="search"],
-  input[type="text"],
-  input[type="tel"],
-  input[type="url"],
-  input[type="password"],
-  textarea,
-  select {
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="url"],
+select,
+textarea {
     height: 38px;
-    padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
+    padding: 6px 10px;
+    /* The 6px vertically centers text on FF, ignored by Webkit */
     background-color: #fff;
     border: 1px solid #D1D1D1;
     border-radius: 4px;
     box-shadow: none;
-    box-sizing: border-box; }
-  /* Removes awkward default styles on some inputs for iOS */
-  input[type="email"],
-  input[type="number"],
-  input[type="search"],
-  input[type="text"],
-  input[type="tel"],
-  input[type="url"],
-  input[type="password"],
-  textarea {
+    box-sizing: border-box;
+}
+/* Removes awkward default styles on some inputs for iOS */
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="url"],
+textarea {
     -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none; }
-  textarea {
+    -moz-appearance: none;
+    appearance: none;
+}
+textarea {
     min-height: 65px;
     padding-top: 6px;
-    padding-bottom: 6px; }
-  input[type="email"]:focus,
-  input[type="number"]:focus,
-  input[type="search"]:focus,
-  input[type="text"]:focus,
-  input[type="tel"]:focus,
-  input[type="url"]:focus,
-  input[type="password"]:focus,
-  textarea:focus,
-  select:focus {
+    padding-bottom: 6px;
+}
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="password"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="text"]:focus,
+input[type="url"]:focus,
+select:focus,
+textarea:focus {
     border: 1px solid #33C3F0;
-    outline: 0; }
-  label,
-  legend {
+    outline: 0;
+}
+label,
+legend {
     display: block;
-    margin-bottom: .5rem;
-    font-weight: 600; }
-  fieldset {
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+}
+fieldset {
     padding: 0;
-    border-width: 0; }
-  input[type="checkbox"],
-  input[type="radio"] {
-    display: inline; }
-  label > .label-body {
+    border-width: 0;
+}
+input[type="checkbox"],
+input[type="radio"] {
+    display: inline;
+}
+label > .label-body {
     display: inline-block;
-    margin-left: .5rem;
-    font-weight: normal; }
-  
-  
-  /* Lists
+    margin-left: 0.5rem;
+    font-weight: normal;
+}
+
+/* Lists
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  ul {
-    list-style: circle inside; }
-  ol {
-    list-style: decimal inside; }
-  ol, ul {
+ul {
+    list-style: circle inside;
+}
+ol {
+    list-style: decimal inside;
+}
+ol,
+ul {
     padding-left: 0;
-    margin-top: 0; }
-  ul ul,
-  ul ol,
-  ol ol,
-  ol ul {
+    margin-top: 0;
+}
+ol ol,
+ol ul,
+ul ol,
+ul ul {
     margin: 1.5rem 0 1.5rem 3rem;
-    font-size: 90%; }
-  li {
-    margin-bottom: 1rem; }
-  
-  
-  /* Code
+    font-size: 90%;
+}
+li {
+    margin-bottom: 1rem;
+}
+
+/* Code
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  code {
-    padding: .2rem .5rem;
-    margin: 0 .2rem;
+code {
+    padding: 0.2rem 0.5rem;
+    margin: 0 0.2rem;
     font-size: 90%;
     white-space: nowrap;
     background: #F1F1F1;
     border: 1px solid #E1E1E1;
-    border-radius: 4px; }
-  pre > code {
+    border-radius: 4px;
+}
+pre > code {
     display: block;
     padding: 1rem 1.5rem;
-    white-space: pre; }
-  
-  
-  /* Tables
+    white-space: pre;
+}
+
+/* Tables
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  th,
-  td {
+td,
+th {
     padding: 12px 15px;
     text-align: left;
-    border-bottom: 1px solid #E1E1E1; }
-  th:first-child,
-  td:first-child {
-    padding-left: 0; }
-  th:last-child,
-  td:last-child {
-    padding-right: 0; }
-  
-  
-  /* Spacing
+    border-bottom: 1px solid #E1E1E1;
+}
+td:first-child,
+th:first-child {
+    padding-left: 0;
+}
+td:last-child,
+th:last-child {
+    padding-right: 0;
+}
+
+/* Spacing
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  button,
-  .button {
-    margin-bottom: 1rem; }
-  input,
-  textarea,
-  select,
-  fieldset {
-    margin-bottom: 1.5rem; }
-  pre,
-  blockquote,
-  dl,
-  figure,
-  table,
-  p,
-  ul,
-  ol,
-  form {
-    margin-bottom: 2.5rem; }
-  
-  
-  /* Utilities
+.button,
+button {
+    margin-bottom: 1rem;
+}
+fieldset,
+input,
+select,
+textarea {
+    margin-bottom: 1.5rem;
+}
+blockquote,
+dl,
+figure,
+form,
+ol,
+p,
+pre,
+table,
+ul {
+    margin-bottom: 2.5rem;
+}
+
+/* Utilities
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  .u-full-width {
+.u-full-width {
     width: 100%;
-    box-sizing: border-box; }
-  .u-max-full-width {
+    box-sizing: border-box;
+}
+.u-max-full-width {
     max-width: 100%;
-    box-sizing: border-box; }
-  .u-pull-right {
-    float: right; }
-  .u-pull-left {
-    float: left; }
-  
-  
-  /* Misc
+    box-sizing: border-box;
+}
+.u-pull-right {
+    float: right;
+}
+.u-pull-left {
+    float: left;
+}
+
+/* Misc
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  hr {
+hr {
     margin-top: 3rem;
     margin-bottom: 3.5rem;
     border-width: 0;
-    border-top: 1px solid #E1E1E1; }
-  
-  
-  /* Clearing
+    border-top: 1px solid #E1E1E1;
+}
+
+/* Clearing
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  
-  /* Self Clearing Goodness */
-  .container:after,
-  .row:after,
-  .u-cf {
+
+/* Self Clearing Goodness */
+.container:after,
+.row:after,
+.u-cf {
     content: "";
     display: table;
-    clear: both; }
-  
-  
-  /* Media Queries
+    clear: both;
+}
+
+/* Media Queries
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
-  /*
+/*
   Note: The best way to structure the use of media queries is to create the queries
   near the relevant code. For example, if you wanted to change the styles for buttons
   on small devices, paste the mobile query code up in the buttons section and style it
   there.
   */
-  
-  
-  /* Larger than mobile */
-  @media (min-width: 400px) {}
-  
-  /* Larger than phablet (also point when grid becomes active) */
-  @media (min-width: 550px) {}
-  
-  /* Larger than tablet */
-  @media (min-width: 750px) {}
-  
-  /* Larger than desktop */
-  @media (min-width: 1000px) {}
-  
-  /* Larger than Desktop HD */
-  @media (min-width: 1200px) {}
-  
+
+/* Larger than mobile */
+@media (min-width: 400px) {}
+
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 550px) {}
+
+/* Larger than tablet */
+@media (min-width: 750px) {}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {}
